# moledro

./: .gitignore  README.md
coelho/: .gitignore  Cargo.toml  Dockerfile  README.md  main.py  pyproject.toml  readme.md
coelho/src/: hello.rs  http.rs  isbn.rs  main.rs
moledro/moledro/: AuthViewModel.swift  ChipView.swift  EditStringsView.swift  GoogleSignInButton.swift  ImageLoader.swift  ImagePicker.swift  Info.plist  LoginView.swift  MainView.swift  ScannerView.swift  SettingsView.swift  WrappingHStack.swift  moledroApp.swift
moledro/moledro.xcodeproj/: project.pbxproj
moledro/moledro.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
moledro/moledro/Assets.xcassets/AppIcon.appiconset/: Contents.json
moledro/moledro/Book/: Book.swift  BookDetailView.swift  BookGalleryItemView.swift  BookInfoDetailView.swift  LibraryBooksView.swift
moledro/moledro/Firebase/: FirebaseStorageImageLoader.swift
